[gd_scene load_steps=7 format=2]

[ext_resource path="res://bit_potion.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Node.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 44
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 90
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 90
extra_spacing_char = 3
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 43
font_data = ExtResource( 1 )

[node name="AnuumrACasa" type="Node2D"]
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 32.0
margin_top = 48.0
margin_right = 249.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 2 )
text = "Escolha uma casa
para o numero:"

[node name="Label2" type="Label" parent="."]
margin_left = 88.0
margin_top = 144.0
margin_right = 184.0
margin_bottom = 232.0
custom_fonts/font = SubResource( 3 )
text = "99"
align = 1

[node name="Buttons" type="YSort" parent="."]

[node name="Button1" type="Button" parent="Buttons"]
margin_left = 280.0
margin_top = 32.0
margin_right = 375.0
margin_bottom = 117.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
action_mode = 0

[node name="Button2" type="Button" parent="Buttons"]
margin_left = 432.0
margin_top = 32.0
margin_right = 527.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 1 )

[node name="Button3" type="Button" parent="Buttons"]
margin_left = 584.0
margin_top = 32.0
margin_right = 679.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 1 )

[node name="Button4" type="Button" parent="Buttons"]
margin_left = 736.0
margin_top = 32.0
margin_right = 831.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 1 )

[node name="Button5" type="Button" parent="Buttons"]
margin_left = 888.0
margin_top = 32.0
margin_right = 983.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 1 )

[node name="Button6" type="Button" parent="Buttons"]
margin_left = 280.0
margin_top = 144.0
margin_right = 375.0
margin_bottom = 229.0
custom_fonts/font = SubResource( 1 )

[node name="Button7" type="Button" parent="Buttons"]
margin_left = 432.0
margin_top = 144.0
margin_right = 527.0
margin_bottom = 229.0
custom_fonts/font = SubResource( 1 )

[node name="Button8" type="Button" parent="Buttons"]
margin_left = 584.0
margin_top = 144.0
margin_right = 679.0
margin_bottom = 229.0
custom_fonts/font = SubResource( 1 )

[node name="Button9" type="Button" parent="Buttons"]
margin_left = 736.0
margin_top = 144.0
margin_right = 831.0
margin_bottom = 229.0
custom_fonts/font = SubResource( 1 )

[node name="Button10" type="Button" parent="Buttons"]
margin_left = 888.0
margin_top = 144.0
margin_right = 983.0
margin_bottom = 229.0
custom_fonts/font = SubResource( 1 )

[node name="Button11" type="Button" parent="Buttons"]
margin_left = 280.0
margin_top = 256.0
margin_right = 375.0
margin_bottom = 341.0
custom_fonts/font = SubResource( 1 )

[node name="Button12" type="Button" parent="Buttons"]
margin_left = 432.0
margin_top = 256.0
margin_right = 527.0
margin_bottom = 341.0
custom_fonts/font = SubResource( 1 )

[node name="Button13" type="Button" parent="Buttons"]
margin_left = 584.0
margin_top = 256.0
margin_right = 679.0
margin_bottom = 341.0
custom_fonts/font = SubResource( 1 )

[node name="Button14" type="Button" parent="Buttons"]
margin_left = 736.0
margin_top = 256.0
margin_right = 831.0
margin_bottom = 341.0
custom_fonts/font = SubResource( 1 )

[node name="Button15" type="Button" parent="Buttons"]
margin_left = 888.0
margin_top = 256.0
margin_right = 983.0
margin_bottom = 341.0
custom_fonts/font = SubResource( 1 )

[node name="Button16" type="Button" parent="Buttons"]
margin_left = 280.0
margin_top = 368.0
margin_right = 375.0
margin_bottom = 453.0
custom_fonts/font = SubResource( 1 )

[node name="Button17" type="Button" parent="Buttons"]
margin_left = 432.0
margin_top = 368.0
margin_right = 527.0
margin_bottom = 453.0
custom_fonts/font = SubResource( 1 )

[node name="Button18" type="Button" parent="Buttons"]
margin_left = 584.0
margin_top = 368.0
margin_right = 679.0
margin_bottom = 453.0
custom_fonts/font = SubResource( 1 )

[node name="Button19" type="Button" parent="Buttons"]
margin_left = 736.0
margin_top = 368.0
margin_right = 831.0
margin_bottom = 453.0
custom_fonts/font = SubResource( 1 )

[node name="Button20" type="Button" parent="Buttons"]
margin_left = 888.0
margin_top = 368.0
margin_right = 983.0
margin_bottom = 453.0
custom_fonts/font = SubResource( 1 )

[node name="Button21" type="Button" parent="Buttons"]
margin_left = 280.0
margin_top = 488.0
margin_right = 375.0
margin_bottom = 573.0
custom_fonts/font = SubResource( 1 )

[node name="Button22" type="Button" parent="Buttons"]
margin_left = 432.0
margin_top = 488.0
margin_right = 527.0
margin_bottom = 573.0
custom_fonts/font = SubResource( 1 )

[node name="Button23" type="Button" parent="Buttons"]
margin_left = 584.0
margin_top = 488.0
margin_right = 679.0
margin_bottom = 573.0
custom_fonts/font = SubResource( 1 )

[node name="Button24" type="Button" parent="Buttons"]
margin_left = 736.0
margin_top = 488.0
margin_right = 831.0
margin_bottom = 573.0
custom_fonts/font = SubResource( 1 )

[node name="Button25" type="Button" parent="Buttons"]
margin_left = 888.0
margin_top = 488.0
margin_right = 983.0
margin_bottom = 573.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )

[node name="NovoJogo" type="Button" parent="."]
margin_left = 48.0
margin_top = 384.0
margin_right = 208.0
margin_bottom = 448.0
custom_fonts/font = SubResource( 4 )
disabled = true
text = "NOVO JOGO"

[node name="Sair" type="Button" parent="."]
margin_left = 48.0
margin_top = 504.0
margin_right = 208.0
margin_bottom = 568.0
custom_fonts/font = SubResource( 4 )
text = "SAIR"

[connection signal="pressed" from="Buttons/Button1" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Buttons/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Buttons/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Buttons/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Buttons/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Buttons/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Buttons/Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="Buttons/Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="Buttons/Button9" to="." method="_on_Button9_pressed"]
[connection signal="pressed" from="Buttons/Button10" to="." method="_on_Button10_pressed"]
[connection signal="pressed" from="Buttons/Button11" to="." method="_on_Button11_pressed"]
[connection signal="pressed" from="Buttons/Button12" to="." method="_on_Button12_pressed"]
[connection signal="pressed" from="Buttons/Button13" to="." method="_on_Button13_pressed"]
[connection signal="pressed" from="Buttons/Button14" to="." method="_on_Button14_pressed"]
[connection signal="pressed" from="Buttons/Button15" to="." method="_on_Button15_pressed"]
[connection signal="pressed" from="Buttons/Button16" to="." method="_on_Button16_pressed"]
[connection signal="pressed" from="Buttons/Button17" to="." method="_on_Button17_pressed"]
[connection signal="pressed" from="Buttons/Button18" to="." method="_on_Button18_pressed"]
[connection signal="pressed" from="Buttons/Button19" to="." method="_on_Button19_pressed"]
[connection signal="pressed" from="Buttons/Button20" to="." method="_on_Button20_pressed"]
[connection signal="pressed" from="Buttons/Button21" to="." method="_on_Button21_pressed"]
[connection signal="pressed" from="Buttons/Button22" to="." method="_on_Button22_pressed"]
[connection signal="pressed" from="Buttons/Button23" to="." method="_on_Button23_pressed"]
[connection signal="pressed" from="Buttons/Button24" to="." method="_on_Button24_pressed"]
[connection signal="pressed" from="Buttons/Button25" to="." method="_on_Button25_pressed"]
[connection signal="pressed" from="NovoJogo" to="." method="_on_NovoJogo_pressed"]
[connection signal="pressed" from="Sair" to="." method="_on_Sair_pressed"]
